--- a/templates/home.html
+++ b/templates/home.html
@@ -173,7 +173,7 @@
                                         </a>
                                     </div>
                                     <div>
-                                        <a class="login" href="{% url 'users:login' %}=" rel="nofollow" title="Log in to your customer account">
+                                        <a class="login" href="{% url 'users:login' %}" rel="nofollow" title="Log in to your customer account">
                                             <i class="fa fa-sign-in"></i>
                                             <span>Sign in</span>
                                         </a>
