--- a/templates/home.html
+++ b/templates/home.html
@@ -2364,6 +2364,7 @@
                                     <div class="col-lg-12 col-md-12">
                                         <div class="block">
                                             <div class="owl-carousel owl-theme testimonial-type-home3">
+                                                {% for fedbacks in fedbacks %}
                                                 <div class="item type-one text-center">
                                                     <div class="textimonial-image d-flex justify-content-center">
                                                         <i class="icon-testimonial"></i>
@@ -2371,75 +2372,16 @@
                                                     <div class="desc-testimonial">
                                                         <div class="testimonial-content">
                                                             <div class="text">
-                                                                <p>"Liquam quis risus viverra, ornare ipsum vitae, congue tellus.
-                                                                    Vestibulum nunc lorem, scelerisque a tristique non, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum"</p>
+                                                                <p>{{fedbacks.fedbacks}}</p>
                                                             </div>
                                                         </div>
                                                         <div class="testimonial-info">
-                                                            <h5 class="mt-0 box-info">David Jame</h5>
-                                                            <p class="box-dress">DESIGNER</p>
+                                                            <h5 class="mt-0 box-info">{{fedbacks.name}}</h5>
+                                                            <p class="box-dress">{{fedbacks.position}}</p>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="item type-one">
-                                                    <div class="textimonial-image d-flex justify-content-center">
-                                                        <i class="icon-testimonial"></i>
-                                                    </div>
-                                                    <div class="desc-testimonial">
-                                                        <div class="testimonial-content">
-                                                            <div class="text">
-                                                                <p>"Liquam quis risus viverra, ornare ipsum vitae, congue tellus.
-                                                                    Vestibulum nunc lorem, scelerisque a tristique non, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum"</p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="testimonial-info">
-                                                            <h5 class="mt-0 box-info">Max Control</h5>
-                                                            <p class="box-dress">DEVELOPER</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="item type-one">
-                                                    <div class="textimonial-image d-flex justify-content-center">
-                                                        <i class="icon-testimonial"></i>
-                                                    </div>
-                                                    <div class="desc-testimonial">
-                                                        <div class="testimonial-content">
-                                                            <div class="text">
-                                                                <p>"Liquam quis risus viverra, ornare ipsum vitae, congue tellus.
-                                                                    Vestibulum nunc lorem, scelerisque a tristique non, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum"</p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="testimonial-info">
-                                                            <h5 class="mt-0 box-info">John Do</h5>
-                                                            <p class="box-dress">CSS -HTML</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="item type-one">
-                                                    <div class="textimonial-image d-flex justify-content-center">
-                                                        <i class="icon-testimonial"></i>
-                                                    </div>
-                                                    <div class="desc-testimonial">
-                                                        <div class="testimonial-content">
-                                                            <div class="text">
-                                                                <p>"Liquam quis risus viverra, ornare ipsum vitae, congue tellus.
-                                                                    Vestibulum nunc lorem, scelerisque a tristique non, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum, accumsan
-                                                                    ornare eros. Nullam sapien metus, volutpat dictum"</p>
-                                                            </div>
-                                                        </div>
-                                                        <div class="testimonial-info">
-                                                            <h5 class="mt-0 box-info">Elizabeth Pham</h5>
-                                                            <p class="box-dress">DEVELOPER</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                {% endfor %}
                                             </div>
                                         </div>
                                     </div>
